--- a/templates/html/Information/view.html
+++ b/templates/html/Information/view.html
@@ -35,21 +35,21 @@
 
     <!-- top 배경이미지 -->
     <div class="top-background">
-        <h1 class="top-background-text">정보</h1>
+        <h1 class="top-category">정보</h1>
     </div>
 
     <!-- 정보 영역 (질문 + 댓글) -->
-    <div class="information-view">
+    <div class="informationView">
         <!-- 정보만 -->
-        <div class="informationView">
+        <div class="information-container">
             <!-- 정보 제목 영역 -->
-            <div class="information-view-top">
+            <div class="title">
                 <!-- 해당 언어 -->
-                <div class="informationLanguage">
+                <div class="Language">
                     <p>[C]</p>
                 </div>
                 <!-- 정보 제목 -->
-                <div class="informationSubject">
+                <div class="Subject">
                     <p>토요일까지 확통프 과제있다!!</p>
                 </div>
             </div>
