--- a/static/css/Question/view.css
+++ b/static/css/Question/view.css
@@ -3,56 +3,31 @@
     background-image: url('/static/img/top-background-1.jpg');
 }
 
-/* 질문 영역*/
-.question-view {
-    margin: 100px 150px 60px 150px;
+/* view 영역*/
+.View {
+    margin: 80px 150px;
+}
+
+/* 질문 영역 */
+.Question {
     border: 2px solid rgb(123, 117, 117);
 }
 
-.questionView {
-    padding: 20px;
-}
-
-/* 답변 영역 */
-.question-answer-view {
-    margin: 30px 150px;
-}
-
-.questionAnswer {
-    border: 2px solid rgb(183, 84, 79);
-    margin-bottom: 20px;
-}
-
-.answerView {
+.question-container {
     padding: 20px;
 }
 
 /* 질문 제목 */
-.question-view-top {
+.title {
     margin-bottom: 10px;
     display: flex;
-}
-
-.questionLanguage {
-    font-size: 25px;
-    font-weight: 500;
-    margin-right: 10px;
-}
-
-.questionSubject {
-    font-size: 25px;
+    gap: 10px;
+    font-size: 27px;
     font-weight: 500;
 }
 
-/* 답변 번호 */
-.answerCount {
-    margin-bottom: 10px;
-    font-size: 20px;
-    font-weight: bold;
-}
-
-/* 질문 top 버튼 (수정+삭제) */
-.question-top-btn {
+/* 수정+삭제 버튼 */
+.postEditor {
     display: flex;
     gap: 10px;
     float: right;
@@ -66,48 +41,58 @@
 }
 
 /* 질문 정보, 답변 정보 */
-.question-view-meta,
-.answerMeta {
+.meta {
     display: flex;
-    color: rgb(123, 117, 117);
+    gap: 10px;
+}
+
+.profile-img {
+    width: 40px;
+    height: 40px;
+}
+
+.postDetails {
+    display: flex;
+    flex-direction: column;
+}
+
+.Writer {
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 2px;
+}
+
+.Date,
+.Count {
+    color: rgb(140, 135, 135);
     font-size: 15px;
-    margin-left: 10px;
+    display: inline-block;
 }
 
-.questionWriter,
-.answerWriter {
-    padding-right: 10px;
-    padding-left: 10px;
-}
+.Count {
+    padding-left: 4px;
+    border-left: 1px solid rgb(140, 135, 135);
 
-.questionDate,
-.answerDate {
-    padding: 0 10px 0 10px;
-    border-left: 1px solid rgb(123, 117, 117);
-}
-
-.questionCount {
-    border-left: 1px solid rgb(123, 117, 117);
-    padding-left: 10px;
+    span {
+        font-weight: bold;
+    }
 }
 
 /* 질문 내용, 답변 내용 */
-.question-view-content,
-.answerContent {
-    margin-top: 20px;
-    padding-top: 20px;
+.content {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    padding-top: 10px;
     border-top: 1px solid gray;
 }
 
 /* 답변 쓰기 버튼 (질문에만) */
-.question-answer-create-btn {
+.createBtn {
     float: right;
-    margin-top: 20px;
 }
 
-/* 좋아요, 스크랩, 댓글 버튼 (질문, 답변) */
-.question-view-bottom,
-.answer-bottom {
+/* 좋아요, 스크랩, 댓글 버튼 */
+.postInteractions {
     display: flex;
     gap: 20px;
     margin-top: 20px;
@@ -120,10 +105,9 @@
 
 /* 댓글 영역 */
 .commentBox {
-    margin-top: 10px;
-    padding: 15px;
-    /* border-top: 1px solid black; */
+    padding: 20px;
     background-color: rgb(253, 249, 242);
+    border-top: 1px solid rgb(176, 176, 176);
 
     span {
         font-size: 20px;
@@ -141,11 +125,6 @@
     background-color: white;
 }
 
-.commentWriter {
-    font-size: 17px;
-    font-weight: 600;
-}
-
 .commentText {
     overflow: hidden;
     border: none;
@@ -153,11 +132,6 @@
     resize: none;
     margin-top: 10px;
     font-size: 14px;
-}
-
-.commentText:empty:before {
-    content: attr(placeholder);
-    color: gray;
 }
 
 .commentCreateBtn {
@@ -170,26 +144,25 @@
     background-color: white;
 }
 
+.comment-input .commentWriter {
+    font-size: 17px;
+    font-weight: 600;
+}
+
+.comment-content .commentWriter {}
+
 .comment-list {
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .comment-list>div {
     padding: 20px;
-    border-bottom: 1px solid gray;
+    border-top: 1px solid gray;
     display: block;
-    /* ## flex로 하면 대댓글이 옆으로 퍼져서 수정함 */
 }
 
-.comment-list>div>i {
-    font-size: 30px;
-    margin-right: 15px;
-    float: left;
-}
-
-.comment-list>div:last-child {
-    border-bottom: none;
-    padding-bottom: 10px;
+.comment-list>div:first-child {
+    border-top: none;
 }
 
 .comment-content {
@@ -211,15 +184,52 @@
     color: gray;
 }
 
-img {
-    width: 50%;
+.commentReplyBtn {
+    background-color: inherit;
+    border: none;
+    color: gray;
 }
+
+.commentReplyBtn:hover {
+    border-bottom: 1px solid black;
+}
+
+/* 답변 영역 */
+.border-bottom {
+    margin-top: 10px;
+}
+
+.answer-container {
+    border: 2px solid rgb(183, 84, 79);
+    margin-bottom: 20px;
+}
+
+.answerView {
+    padding: 20px;
+}
+
+@media all and (max-width:1000px) {
+    .View {
+        margin: 80px 0;
+    }
+}
+
+/* 답변 번호 */
+.answerCount {
+    margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+/*  */
 
 /* 대댓글 영역 */
 .rcs {
     /* 한 칸씩 들어가는 거임 */
-    margin-left: 50px;
+    padding-left: 50px !important;
 }
 
 /* 대댓글 하나 */
-.rcs>div {}
+.rcs>div {
+    margin-bottom: 10px;
+}
