--- a/static/css/header.css
+++ b/static/css/header.css
@@ -2,8 +2,8 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 80px;
-    padding: 45px;
+    height: 90px;
+    padding: 10px 100px;
 
     display: flex;
     align-items: center;
@@ -14,16 +14,20 @@ header {
 }
 
 .logo-img {
-    font-size: 40px;
-    font-weight: bold;
+    width: auto;
+    height: 75px;
+
+    img {
+        filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(132deg) brightness(103%) contrast(103%);
+    }
 }
 
 .header-menutop {
     width: 100%;
     height: 100%;
     display: flex;
-    text-align: center;
-    gap: 25px;
+    /* text-align: center; */
+    gap: 50px;
 }
 
 .header-menutop li {
@@ -33,7 +37,7 @@ header {
 }
 
 .login-btn {
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 500;
     color: white;
     cursor: pointer;
@@ -50,7 +54,41 @@ header.active {
     border-bottom: 1px solid rgb(187, 185, 185);
 }
 
+header.active .logo-img img {
+    filter: opacity(1) drop-shadow(0 0 0 #000000);
+}
+
 header.active a,
 header.active .login-btn {
     color: black;
+}
+
+@media all and (max-width:1230px) {
+    header {
+        padding: 10px 50px;
+    }
+
+    .header-menutop {
+        gap: 30px;
+    }
+}
+
+@media all and (max-width:1000px) {
+    header {
+        padding: 10px 30px;
+    }
+
+    .header-menutop {
+        gap: 20px;
+    }
+}
+
+@media all and (max-width:870px) {
+    header {
+        padding: 10px 10px;
+    }
+
+    .header-menutop {
+        gap: 10px;
+    }
 }
