--- a/templates/html/Home/home.html
+++ b/templates/html/Home/home.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ko">
 
@@ -7,19 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>홈</title>
 
-    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="{% static '/css/common.css' %}">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <script src="/js/jquery-3.7.1.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $(".headers").load("/html/header.html");
-            $(".footers").load("/html/footer.html");
-        });
-    </script>
+    <script src="{% static '/js/jquery-3.7.1.min.js' %}"></script>
 
     <style>
         main {
@@ -30,11 +25,11 @@
 </head>
 
 <body>
-    <div class="headers"></div>
+    <div class="headers">{% include "html/header.html" %}</div>
     <main>
 
     </main>
-    <div class="footers"></div>
+    <div class="footers">{% include "html/footer.html" %}</div>
 </body>
 
 </html>
