--- a/templates/html/Question/view.html
+++ b/templates/html/Question/view.html
@@ -70,7 +70,7 @@
         <!-- 답변 쓰기 버튼 -->
         <!-- !! 버튼 누르면 답변 쓰는 화면으로 이동 -->
         <div class="question-answer-create-btn">
-            <i class="fa-solid fa-pen"></i> 답변 쓰기
+            <a href="{% url 'cmapp:answer_create' question.id %}"><i class="fa-solid fa-pen"></i>답변 쓰기</a>
         </div>
 
         <!-- 좋아요, 스크랩, 댓글 버튼 -->
